# tauri-codegen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
docs/superpowers/specs/: 2026-04-18-architecture-refactor-design.md
src/: cargo_expand.rs  cli.rs  config.rs  diagnostics.rs  known_types.rs  lib.rs  main.rs  pipeline.rs  resolver.rs  scanner.rs  utils.rs
src/generator/: commands_gen.rs  helpers_gen.rs  mod.rs  type_mapper.rs  types_gen.rs
src/generator/commands_gen/: tests.rs
src/generator/types_gen/: tests.rs
src/models/: command.rs  mod.rs  parse_result.rs  rust_type.rs  types.rs
src/parser/: command.rs  command_parser.rs  mod.rs  type_extractor.rs  type_parser.rs  types.rs
src/parser/type_extractor/: tests.rs
src/parser/type_parser/: expanded.rs  serde_attrs.rs  tests.rs
src/pipeline/: collect.rs  tests.rs
src/resolver/: helpers.rs  imports.rs  tests.rs
tauri-ts-generator-derive/: Cargo.toml  README.md  release.toml
tauri-ts-generator-derive/src/: lib.rs
tauri-ts-generator-derive/tests/: compile_tests.rs
test-project/: tauri-codegen.toml
test-project/src-tauri/src/: commands.rs
tests/e2e/: basic.rs  channels.rs  errors.rs  helpers.rs  init.rs  main.rs  path_qualified.rs  recursive.rs  rename_all.rs  serde_features.rs  smart_pointers.rs  snapshots.rs  struct_shapes.rs
tests/e2e/snapshots/: e2e__snapshots__flatten_and_skip__types.snap  e2e__snapshots__user_crud__types.snap  (+5 more)
tests/integration/: generator_tests.rs  mod.rs  parser_tests.rs  pipeline_tests.rs
(+5 files in other folders)
